--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,13 @@
 <div class="container">
   <div class="section-title text-center">
       <h1 class="mt-5">REGİSTER</h1>
-
+      <% if (flashMessages) { %>
+        <% if(flashMessages.error) { %>
+            <div class="alert alert-danger" role="alert">
+                <%= flashMessages.error %> 
+            </div>
+        <% } %>
+      <% } %>
   <div class="row">
       <div class="col-xl-12 col-md-12 col-sm-12">
           <div class="contact_form">
@@ -21,7 +27,7 @@
                           <input type="email" name="email" id="email" class="form-control" placeholder="Email">
                       </div>
                       <div class="offset-2 col-lg-8 col-md-8 col-sm-8 mb-3">
-                        <input type="file" name="image" id="image" class="form-control" value="image" hidden>
+                        <input type="text" name="image" id="image" class="form-control" value="image" hidden>
                      </div>
                       <div class="offset-2 col-lg-8 col-md-8 col-sm-8 mb-3">
                         <select class="form-control" name="role">
